--- a/templates/_fulcrum-premium-finance/_entry/_blog-entry.twig
+++ b/templates/_fulcrum-premium-finance/_entry/_blog-entry.twig
@@ -1,5 +1,6 @@
 {% extends "_layout"%}
 {% block content %}
+{% include "_fulcrum-premium-finance/_includes/_nav" %}
 <!-- BLOG ENTRY - HEADER IMAGE - Section 1-->
 <div class="about-us-header section">
     <div class="row">
