--- a/templates/_fulcrum-premium-finance/_entry/_client-profile-entry.twig
+++ b/templates/_fulcrum-premium-finance/_entry/_client-profile-entry.twig
@@ -1,5 +1,6 @@
 {% extends "_layout"%}
 {% block content %}
+{% include "_fulcrum-premium-finance/_includes/_nav" %}
 
 <!-- CLIENT PROFILE HEADER - SECTION 1 -->
 <div class="client-profile-header section">
