--- a/templates/_fulcrum-premium-finance/_singles/_about-us.twig
+++ b/templates/_fulcrum-premium-finance/_singles/_about-us.twig
@@ -1,5 +1,6 @@
 {% extends "_layout"%}
 {% block content %}
+{% include "_fulcrum-premium-finance/_includes/_nav" %}
 <!-- ABOUT US HEADER - Section 1-->
 <div id="about-us" class="about-us-header section">
     <div class="row">
