--- a/templates/_fulcrum-premium-finance/_singles/_what-we-offer.twig
+++ b/templates/_fulcrum-premium-finance/_singles/_what-we-offer.twig
@@ -1,5 +1,6 @@
 {% extends "_layout"%}
 {% block content %}
+{% include "_fulcrum-premium-finance/_includes/_nav" %}
 <!-- WHAT WE OFFER HEADER - Section 1-->
 <div id="what-we-offer" class="about-us-header section">
     <div class="row">
