--- a/templates/_fulcrum-premium-finance/_singles/_blog.twig
+++ b/templates/_fulcrum-premium-finance/_singles/_blog.twig
@@ -1,5 +1,6 @@
 {% extends "_layout"%}
 {% block content %}
+{% include "_fulcrum-premium-finance/_includes/_nav" %}
 <!-- BLOG HEADER - SECTION 1 -->
 <div id="blog" class="blog-header section">
     <div class="row">
