--- a/templates/_fulcrum-premium-finance/_singles/_contact-us.twig
+++ b/templates/_fulcrum-premium-finance/_singles/_contact-us.twig
@@ -1,5 +1,6 @@
 {% extends "_layout"%}
 {% block content %}
+{% include "_fulcrum-premium-finance/_includes/_nav" %}
 
 <!-- CONTACT US - HEADER SECTION-->
 <div id="contact-us-header-section" class="main-header animate__backInLeft">
