--- a/templates/_fulcrum-premium-finance/_singles/_homepage.twig
+++ b/templates/_fulcrum-premium-finance/_singles/_homepage.twig
@@ -1,5 +1,6 @@
 {% extends "_layout"%}
 {% block content %}
+{% include "_fulcrum-premium-finance/_includes/_nav" %}
 <!-- HEADER - Section 1-->
 <div id="homepage" class="homepage-header section animate__animated animate__slideInRight">
     <div class="row">
