--- a/templates/_layout.twig
+++ b/templates/_layout.twig
@@ -13,8 +13,9 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.js"></script>
     <link rel="stylesheet" href="/web/assets/scripts/animate.min.css" />
-    <link rel="stylesheet" type="text/css" href="/web/assets/scripts/styles.css">
     <script src="/web/assets/scripts/main.js" type="text/javascript"></script>
+    <link rel="stylesheet" type="text/css" href="/web/assets/scripts/styles.css">
+    <script type="text/javascript" src="/web/assets/scripts/vanilla-tilt.js"></script>
   <body>
       {% block content %}
       {% endblock %}
